Added creation of JRE for client/server