@@ -13,3 +13,18 @@ dependencies {
 application {
     mainClass.set("ServerKt")
 }
+
+tasks.register("createServerJre", Exec::class) {
+    dependsOn("shadowJar")
+    val jreDir = layout.buildDirectory.dir("server-jre")
+
+    commandLine = listOf(
+        "jlink",
+        "--add-modules", "jdk.unsupported",
+        "--output", jreDir.get().asFile.absolutePath,
+        "--strip-debug",
+        "--compress=2",
+        "--no-header-files",
+        "--no-man-pages"
+    )
+}
